--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "pretty": "prettier --write --use-tabs --single-quote --arrow-parens always \"src/**/*.js\""
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.9",
